Add minor pagination bug fixes, review suggestions, and remove dead code